Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-10850

Rebalance fails with upr replication

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.0
    • 3.0
    • ns_server
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      Following test fails with upr replication.
      rebalance.rebalancein.RebalanceInTests.incremental_rebalance_in_with_queries,blob_generator=False,items=2000,is_dev_ddoc=False,max_verify=2000

      2014-04-14 12:15:39 | ERROR | MainProcess | Cluster_Thread | [rest_client.print_UI_logs] {u'node': u'n_0@172.16.1.130', u'code': 2, u'text': u'Rebalance exited with reason {unexpected_exit,\n {\'EXIT\',<0.7424.0>,\n {bulk_set_vbucket_state_failed,\n [{\'n_2@127.0.0.1\',\n {\'EXIT\',\n {{{{{badmatch,\n [{<19877.991.0>,\n {done,exit,\n {normal,\n {gen_server,call,\n [<19877.988.0>,\n

      {setup_streams,[1023]}

      ,\n infinity]}},\n [{gen_server,call,3,\n [

      {file,"gen_server.erl"},\n {line,188}]},\n {upr_replicator,\n \'spawn_and_wait/1-fun-0\',1,\n [{file,"src/upr_replicator.erl"},\n {line,173}]}]}}]},\n [{misc,\n sync_shutdown_many_i_am_trapping_exits,\n 1,\n [{file,"src/misc.erl"},{line,1475}]},\n {upr_replicator,spawn_and_wait,1,\n [{file,"src/upr_replicator.erl"},\n {line,195}]},\n {upr_replicator,handle_call,3,\n [{file,"src/upr_replicator.erl"},\n {line,110}]},\n {gen_server,handle_msg,5,\n [{file,"gen_server.erl"}

      ,

      {line,588}

      ]},\n {proc_lib,init_p_do_apply,3,\n [

      {file,"proc_lib.erl"}

      ,

      {line,227}

      ]}]},\n {gen_server,call,\n [\'upr_replicator-default-n_0@172.16.1.130\',\n

      {setup_replication,[1023]}

      ,\n infinity]}},\n {gen_server,call,\n [\'replication_manager-default\',\n

      {change_vbucket_replication,1023,\n \'n_0@172.16.1.130\'}

      ,\n infinity]}},\n {gen_server,call,\n [{\'janitor_agent-default\',\n

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              iryna iryna
              sarath Sarath Lakshman
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty