MB-10850: Always add backfill remaining stat to stats vb-takeover

This stat is used by ns_server to check for backfill completion. It
was previously not sent as part of the stats if the stream had
already transitioned to dead state. This change causes it to
always be sent even if the stream has transistioned to dead state.

Change-Id: I6b17df09cc8f6188c95591224a86d26089c9e4d9
Reviewed-on: http://review.couchbase.org/36165
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>